# kromer

./: .env.example  .env.sample  .gitignore  .surrealdb.example  Cargo.toml  Dockerfile  README.md  recipe.json
.bruno/: bruno.json
.bruno/V1/Addresses/: List the richest addresses.bru
.bruno/api/v1/: Authenticate an address.bru  Get MOTD.bru  Get recent changes to Kromer.bru  Get the latest kromerwallet version.bru  Get the money supply.bru  Get v2 address from a private key.bru
.github/workflows/: rust.yml
api/: Cargo.toml
api/src/: errors.rs  lib.rs  routes.rs
api/src/errors/: address.rs  auth.rs  generic.rs  internal.rs  name.rs  routes.rs  transaction.rs
api/src/responses/v1/: addresses.rs  generic.rs  mod.rs  names.rs  transactions.rs
api/src/routes/internal/: mod.rs  wallets.rs
api/src/routes/v1/: addresses.rs  mod.rs  names.rs  transactions.rs  ws.rs
api/src/util/: cors.rs  guards.rs  mod.rs
entity/src/: addresses.rs  mod.rs  names.rs  transactions.rs
migration/src/: m20220101_000001_create_table.rs
service/: Cargo.toml
service/src/: controller.rs  lib.rs  query.rs
service/src/controller/: address.rs  authentication.rs  name.rs  transaction.rs
src/: guards.rs  lib.rs  main.rs
src/database/: db.rs
src/database/models/: mod.rs  name.rs  player.rs  transaction.rs  wallet.rs
src/entities/: address.rs  mod.rs  name.rs  prelude.rs  transaction.rs
src/errors/: krist.rs  mod.rs  name.rs  transaction.rs  wallet.rs  websocket.rs
src/errors/krist/: address.rs  generic.rs  name.rs  transaction.rs  websockets.rs
src/migration/src/: lib.rs  m20240113_000001_create_address.rs  m20240113_000001_create_name.rs  m20240113_000001_create_transaction.rs
src/models/: addresses.rs  auth.rs  blocks.rs  error.rs  mod.rs  motd.rs  names.rs  transactions.rs  websockets.rs
src/models/webserver/: lookup.rs  mod.rs  search.rs
src/pg_controllers/: address.rs  auth.rs  mod.rs  name.rs  transaction.rs
src/pg_errors/: address.rs  generic.rs  internal.rs  mod.rs  name.rs  routes.rs  transaction.rs
src/pg_utils/: crypto.rs
src/routes/: index.rs  mod.rs  new_ws.rs  not_found.rs  old_ws.rs  ws.rs
src/utils/: crypto.rs
src/websockets/: handler.rs  message.rs  mod.rs  server.rs  session.rs  token_cache.rs  wrapped_ws.rs  ws_manager.rs  ws_server.rs
src/ws/: mod.rs  server.rs  session.rs
surrealdb-migrations/events/: transfer_balance.surql
surrealdb-migrations/schemas/: functions.surql  name.surql  player.surql  transaction.surql  wallet.surql
(+79 files in other folders)
