[package]
name = "kromer"
version = "0.1.1"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
actix-web = "4.9.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
thiserror = "1.0.63"
surrealdb = "2.0.2"
chrono = { version = "0.4.38", features = ["serde"] }
actix-web-actors = "4.3.1"
actix-broker = "0.4.3"
actix = "0.13.5"
names = "0.14.0"
actix-ws = "0.3.0"
