[package]
name = "kromer"
version = "0.1.1"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
actix-web = "4.9.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["full"] }
thiserror = "2.0.11"
surrealdb = "2.1.4"
chrono = { version = "0.4.39", features = ["serde"] }
actix-broker = "0.4.3"
actix = "0.13.5"
names = "0.14.0"
actix-ws = "0.3.0"
futures-util = "0.3.31"
regex = "1.11.1"
once_cell = "1.20.2"
rust_decimal = { version = "1.36.0", features = ["serde-float"] }
rust_decimal_macros = "1.36.0"
