[package]
name = "kromer-economy-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
dotenvy = "0.15.7"
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
kromer-economy-service = { path = "../service" }
kromer-economy-entity = { path = "../entity" }
kromer-economy-migration = { path = "../migration" }
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
argon2.workspace = true
rand.workspace = true